package model;

public class Report extends Message {

}
